- Limit search input to 200 characters.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_search_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_search_view.xml
@@ -32,6 +32,7 @@
         android:imeOptions="actionSearch"
         android:includeFontPadding="false"
         android:inputType="text"
+        android:maxLength="200"
         android:maxLines="1"
         android:paddingHorizontal="10dp"
         android:paddingVertical="12dp"
