--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_members.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_members.xml
@@ -29,41 +29,89 @@
             android:background="@android:color/transparent"
             app:elevation="0dp">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/layoutAddMembers"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?selectableItemBackground"
-                android:gravity="center_vertical"
-                android:paddingVertical="7dp"
-                app:layout_scrollFlags="scroll|enterAlways">
+                android:layout_height="wrap_content">
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/icAddMembers"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="15dp"
-                    android:background="@drawable/sceyt_bg_circle"
-                    android:backgroundTint="@color/sceyt_color_surface_1"
-                    app:layout_constraintBottom_toBottomOf="@+id/addMembers"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/addMembers"
-                    app:srcCompat="@drawable/sceyt_ic_add_members" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/addMembers"
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/layoutAddMembers"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="?selectableItemBackground"
                     android:gravity="center_vertical"
-                    android:lines="1"
-                    android:paddingHorizontal="15dp"
-                    android:text="@string/sceyt_add_members"
-                    android:textColor="@color/sceyt_color_text_primary"
-                    android:textSize="@dimen/mediumTextSize"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/icAddMembers" />
+                    android:paddingVertical="7dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_scrollFlags="scroll|enterAlways">
 
-            </androidx.appcompat.widget.LinearLayoutCompat>
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/icAddMembers"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="15dp"
+                        android:background="@drawable/sceyt_bg_circle"
+                        android:backgroundTint="@color/sceyt_color_surface_1"
+                        android:padding="10dp"
+                        app:layout_constraintBottom_toBottomOf="@+id/addMembers"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/addMembers"
+                        app:srcCompat="@drawable/sceyt_ic_add" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/addMembers"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto_medium"
+                        android:gravity="center_vertical"
+                        android:lines="1"
+                        android:paddingHorizontal="15dp"
+                        android:text="@string/sceyt_add_members"
+                        android:textColor="@color/sceyt_color_text_primary"
+                        android:textSize="@dimen/mediumTextSize"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/icAddMembers" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/layoutInviteLink"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?selectableItemBackground"
+                    android:gravity="center_vertical"
+                    android:paddingVertical="7dp"
+                    app:layout_constraintTop_toBottomOf="@+id/layoutAddMembers"
+                    app:layout_scrollFlags="scroll|enterAlways">
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/icInviteLink"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="15dp"
+                        android:background="@drawable/sceyt_bg_circle"
+                        android:backgroundTint="@color/sceyt_color_surface_1"
+                        android:padding="10dp"
+                        app:layout_constraintBottom_toBottomOf="@+id/addMembers"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/addMembers"
+                        app:srcCompat="@drawable/sceyt_ic_link" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvInviteLink"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto_medium"
+                        android:gravity="center_vertical"
+                        android:lines="1"
+                        android:paddingHorizontal="15dp"
+                        android:text="@string/sceyt_invite_link"
+                        android:textColor="@color/sceyt_color_text_primary"
+                        android:textSize="@dimen/mediumTextSize"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/icAddMembers" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </com.google.android.material.appbar.AppBarLayout>
 
