- Unify string resource prefixes. - Add toast message for copied invite link.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_bottom_sheet_join_by_invite_link.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_bottom_sheet_join_by_invite_link.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:gravity="center"
-            android:text="@string/group_chat_invite"
+            android:text="@string/sceyt_group_chat_invite"
             android:textColor="@color/sceyt_color_text_secondary"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +82,7 @@
             android:layout_marginBottom="24dp"
             android:background="@drawable/sceyt_bg_corners_8"
             android:backgroundTint="@color/sceyt_color_accent"
-            android:text="@string/join_group"
+            android:text="@string/sceyt_join_group"
             android:textAllCaps="false"
             android:textColor="@color/sceyt_color_on_primary"
             android:textSize="16sp"
