--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_poll_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_poll_message.xml
@@ -121,20 +121,30 @@
             tools:itemCount="3"
             tools:listitem="@layout/sceyt_item_poll_option" />
 
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginHorizontal="4dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/sceyt_color_background"
+            app:layout_constraintTop_toBottomOf="@+id/rvPollOptions" />
+
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvViewResults"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="8dp"
+            android:background="?android:selectableItemBackground"
+            android:clickable="true"
             android:fontFamily="@font/roboto_medium"
+            android:gravity="center"
+            android:paddingVertical="15dp"
             android:text="@string/sceyt_view_results"
             android:textColor="@color/sceyt_color_accent"
             android:textSize="@dimen/mediumTextSize"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rvPollOptions" />
+            app:layout_constraintTop_toBottomOf="@+id/divider" />
 
         <com.sceyt.chatuikit.presentation.custom_views.DecoratedTextView
             android:id="@+id/messageDate"
@@ -147,6 +157,7 @@
             android:paddingEnd="5dp"
             app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@id/layoutDetails"
+            app:layout_constraintTop_toBottomOf="@+id/tvViewResults"
             app:sceytUiDecoratedTextColor="@color/sceyt_color_text_secondary"
             app:sceytUiDecoratedTextSize="@dimen/tinyTextSize"
             app:sceytUiDecoratedTextTrailingIconPadding="5dp"
