--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_poll_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_poll_message.xml
@@ -150,6 +150,7 @@
             android:id="@+id/messageDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             android:includeFontPadding="false"
