--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
@@ -156,4 +156,11 @@
         <attr name="sceytUiToolbarDividerColor" format="color|reference" />
     </declare-styleable>
 
+    <declare-styleable name="HorizontalProgressView">
+        <attr name="horizontalProgressViewProgress" format="integer" />
+        <attr name="horizontalProgressViewColor" format="color|reference" />
+        <attr name="horizontalProgressViewBackgroundColor" format="color|reference" />
+        <attr name="horizontalProgressViewCornerRadius" format="dimension" />
+    </declare-styleable>
+
 </resources>
