- Add border support for AvatarView.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
@@ -32,6 +32,8 @@
             <flag name="rounded" value="1" />
         </attr>
         <attr name="sceytUiAvatarCornerRadius" format="dimension" />
+        <attr name="sceytUiAvatarBorderWidth" format="dimension" />
+        <attr name="sceytUiAvatarBorderColor" format="color|reference" />
     </declare-styleable>
 
     <declare-styleable name="ToReplyLineView">
