--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_poll_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_poll_message.xml
@@ -149,7 +149,6 @@
             android:id="@+id/messageDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             android:includeFontPadding="false"
@@ -158,6 +157,7 @@
             app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@id/layoutDetails"
             app:layout_constraintTop_toBottomOf="@+id/tvViewResults"
+            app:layout_goneMarginTop="15dp"
             app:sceytUiDecoratedTextColor="@color/sceyt_color_text_secondary"
             app:sceytUiDecoratedTextSize="@dimen/tinyTextSize"
             app:sceytUiDecoratedTextTrailingIconPadding="5dp"
