--- a/SceytChatUiKit/src/main/res/menu/sceyt_menu_message_actions.xml
+++ b/SceytChatUiKit/src/main/res/menu/sceyt_menu_message_actions.xml
@@ -47,4 +47,18 @@
         android:visible="false"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/sceyt_retract_vote"
+        android:icon="@drawable/sceyt_ic_retract_vote"
+        android:title="@string/sceyt_retract_vote"
+        android:visible="false"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/sceyt_end_vote"
+        android:icon="@drawable/sceyt_ic_end_vote"
+        android:title="@string/sceyt_end_vote"
+        android:visible="false"
+        app:showAsAction="ifRoom" />
+
 </menu>
