- Prioritize own user's avatar in poll voter list. - Adjust UI constraints and item decorations for poll options. - Increase displayed voter count from 2 to 3.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_poll_option.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_poll_option.xml
@@ -24,10 +24,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="8dp"
-        android:minHeight="20dp"
         android:textColor="@color/sceyt_color_text_primary"
         android:textSize="@dimen/smallTextSize"
         app:layout_constraintEnd_toStartOf="@+id/rvVoters"
+        app:layout_constraintHeight_min="20dp"
         app:layout_constraintStart_toEndOf="@+id/checkbox"
         app:layout_constraintTop_toTopOf="@+id/checkbox"
         app:layout_goneMarginStart="0dp"
@@ -38,12 +38,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="3dp"
-        android:minWidth="30dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="@+id/barrierVoters"
         app:layout_constraintEnd_toStartOf="@+id/tvVoteCount"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_min="45dp"
         app:stackFromEnd="true"
         tools:itemCount="1"
         tools:listitem="@layout/sceyt_item_voter_avatar" />
