--- a/SceytChatUiKit/src/main/res/values-night/colors.xml
+++ b/SceytChatUiKit/src/main/res/values-night/colors.xml
@@ -32,5 +32,6 @@
     <color name="sceyt_color_bg_out_link_preview">#2E3052</color>
     <color name="sceyt_color_bg_inc_link_preview">#303032</color>
     <color name="sceyt_switch_track_unchecked_color">#464749</color>
+    <color name="sceyt_progress_track_color">#464749</color>
 
 </resources>
