--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_poll_result_header.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_poll_result_header.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingTop="16dp"
-    android:paddingBottom="12dp">
+    android:paddingTop="16dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvPollQuestion"
