- Rename `etQuestion` to `inputQuestion` for consistency. - Set cursor and handle colors for poll question and option inputs.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_create_poll.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_create_poll.xml
@@ -50,7 +50,7 @@
                 tools:backgroundTint="@color/sceyt_color_surface_1">
 
                 <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/etQuestion"
+                    android:id="@+id/inputQuestion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
