--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_poll_option_voters.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_poll_option_voters.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:clipToPadding="false"
+        android:layout_marginHorizontal="16dp"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
