--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_poll_results.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_poll_results.xml
@@ -19,6 +19,7 @@
         android:id="@+id/rvPollOptions"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginHorizontal="16dp"
         android:clipToPadding="false"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
