--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_poll_result_header.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_poll_result_header.xml
@@ -6,13 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingTop="16dp">
+    android:layout_marginTop="16dp"
+    android:layout_marginBottom="14dp"
+    android:paddingVertical="14dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvPollQuestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
+        android:layout_marginHorizontal="12dp"
         android:fontFamily="@font/roboto_medium"
         android:textColor="@color/sceyt_color_text_primary"
         android:textSize="@dimen/mediumTextSize"
@@ -26,18 +28,10 @@
         android:id="@+id/tvPollType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
+        android:layout_marginHorizontal="12dp"
         android:layout_marginTop="4dp"
         android:fontFamily="@font/roboto_regular"
         android:textColor="@color/sceyt_color_text_secondary"
         android:textSize="@dimen/smallTextSize"
         tools:text="Public poll" />
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="12dp"
-        android:background="@color/sceyt_color_border" />
-
 </LinearLayout>
