--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_poll_result_option.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_poll_result_option.xml
@@ -5,16 +5,16 @@
     android:id="@+id/layoutOptionContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingTop="16dp">
+    android:paddingHorizontal="12dp"
+    android:layout_marginVertical="6dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvOptionName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/roboto_medium"
+        android:paddingVertical="14dp"
         android:textColor="@color/sceyt_color_text_primary"
         android:textSize="@dimen/mediumTextSize"
         app:layout_constraintEnd_toStartOf="@+id/tvVoteCount"
@@ -27,20 +27,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
         android:fontFamily="@font/roboto_regular"
         android:textColor="@color/sceyt_color_text_secondary"
         android:textSize="@dimen/smallTextSize"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tvOptionName"
+        app:layout_constraintBottom_toBottomOf="@id/tvOptionName"
         tools:text="152 votes" />
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvVoters"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
         android:nestedScrollingEnabled="false"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -51,10 +49,11 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/btnShowAll"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:foreground="@drawable/sceyt_bg_ripple"
+        android:gravity="center"
+        android:paddingVertical="16dp"
         android:text="@string/sceyt_show_all"
         android:textAllCaps="false"
         android:visibility="gone"
@@ -62,15 +61,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rvVoters"
         tools:visibility="visible" />
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/sceyt_color_border"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnShowAll" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
