--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_voter_header.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_voter_header.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:fontFamily="@font/roboto_regular"
     android:paddingVertical="10dp"
+    android:paddingHorizontal="16dp"
     android:textColor="@color/sceyt_color_text_secondary"
     android:textSize="@dimen/smallTextSize"
     tools:text="152 votes" />
