--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_poll_result_option.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_poll_result_option.xml
@@ -5,13 +5,13 @@
     android:id="@+id/layoutOptionContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="12dp"
     android:layout_marginVertical="6dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvOptionName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/roboto_medium"
         android:paddingVertical="14dp"
@@ -27,12 +27,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
         android:fontFamily="@font/roboto_regular"
         android:textColor="@color/sceyt_color_text_secondary"
         android:textSize="@dimen/smallTextSize"
+        app:layout_constraintBottom_toBottomOf="@id/tvOptionName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/tvOptionName"
-        app:layout_constraintBottom_toBottomOf="@id/tvOptionName"
         tools:text="152 votes" />
 
     <androidx.recyclerview.widget.RecyclerView
