--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_voter.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_voter.xml
@@ -7,6 +7,7 @@
     android:background="?selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
+    android:paddingHorizontal="16dp"
     android:paddingVertical="6dp">
 
     <com.sceyt.chatuikit.presentation.custom_views.AvatarView
